my-apps/ai/presenton/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presenton
  namespace: presenton
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: presenton
  template:
    metadata:
      labels:
        app: presenton
    spec:
      containers:
      - name: presenton
        # renovate: datasource=docker depName=ghcr.io/presenton/presenton
        image: ghcr.io/presenton/presenton:v0.9.11-beta@sha256:ddf0d1f26397764856acdf94489dbbae5a2c0644a280723fd80bc7a80de338ba
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 500m
            memory: 1000Mi
          limits:
            memory: 4000Mi
        volumeMounts:
        - name: data
          mountPath: /app_data
      volumes:
      - name: repo-scripts
        configMap:
          name: presenton-llm-scripts
      - name: data
        persistentVolumeClaim:
          claimName: presenton-data
