my-apps/ai/presenton/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: presenton
  namespace: presenton
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal-technitium
    namespace: gateway
  hostnames:
  - "presenton.vanillax.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: presenton
      port: 80
      weight: 1
